[tool.poetry]
name = "webvirt-api"
version = "0.1.0"
description = "Back-end API for the webvirt application"
authors = ["Kevin Morris <kevr@0cost.org>"]
license = "LICENSE"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.5"
python-pam = "^2.0.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
flake8 = "^6.0.0"
black = "^22.12.0"
isort = "^5.11.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
