[tool.poetry]
name = "webvirt-api"
version = "0.1.0"
description = "Back-end API for the webvirt application"
authors = ["Kevin Morris <kevr@0cost.org>"]
license = "LICENSE"
readme = "README.md"

[tool.black]
line-length = 79
exclude = "[.]?venv/.*"

[tool.isort]
profile = "black"
skip_glob = "*venv/**"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.5"
python-pam = "^2.0.2"
str2bool = "^1.1"
djangorestframework = "^3.14.0"
six = "^1.16.0"
djangorestframework-simplejwt = "^5.2.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
flake8 = "^6.0.0"
black = "^22.12.0"
isort = "^5.11.4"
autoflake = "^2.0.0"
coverage = "^7.0.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
